force-app/main/default/objects/MonthlyPayment__c/fields/Desk_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Desk_Capacity__c</fullName>
    <formula>IF( ISBLANK( OrderItem__c ),OpportunityLineItem__r.Desk_Count__c,  OrderItem__r.Number_of_desks__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desk Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>