force-app/main/default/objects/MonthlyPayment__c/fields/DeskNumber__c.field-meta.xml
<CustomField>
    <fullName>DeskNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Desk Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>