force-app/main/default/objects/MonthlyPayment__c/fields/FinalPrice__c.field-meta.xml
<CustomField>
    <fullName>FinalPrice__c</fullName>
    <formula>Price__c * (1 + Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claculated Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>