force-app/main/default/objects/MonthlyPayment__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location of the Office</description>
    <label>Location</label>
    <referenceTo>Locations__c</referenceTo>
    <relationshipLabel>Monthly Payments</relationshipLabel>
    <relationshipName>MonthlyPayments</relationshipName>
    <type>Lookup</type>
</CustomField>