force-app/main/default/objects/MonthlyPayment__c/fields/Office_Leaving_Next_Month_Qunatity_Total__c.field-meta.xml
<CustomField>
    <fullName>Office_Leaving_Next_Month_Qunatity_Total__c</fullName>
    <formula>IF(
  AND(
    OrderItem__r.Product_Type_Name__c = &apos;Standard Products&apos;,
    OR(
      AND(
        MONTH(Start_date__c) = MONTH(TODAY()),
        YEAR(Start_date__c) = YEAR(TODAY())
      ),
      AND(
        MONTH(End_date__c) = MONTH(TODAY()),
        YEAR(End_date__c) = YEAR(TODAY())
      )
    )
  ),
  OrderItem__r.Quantity,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office Leaving Next Month Qunatity Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>