force-app/main/default/objects/MonthlyPayment__c/fields/Office_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Office_Quantity__c</fullName>
    <formula>IF( OrderItem__r.Product_Type_Name__c = &apos;Standard Products&apos;,  OrderItem__r.Quantity  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>