force-app/main/default/objects/MonthlyPayment__c/fields/Other_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Other_Monthly_Income__c</fullName>
    <formula>IF( OR( OrderItem__r.Product_Sub_Type_Name__c = &apos;Parking spot&apos; , OrderItem__r.Product_Type_Name__c = &apos;Standard Products&apos;), 0, FinalPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>