force-app/main/default/objects/MonthlyPayment__c/fields/Other_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Other_Quantity__c</fullName>
    <formula>IF( OR( OrderItem__r.Product_Sub_Type_Name__c = &apos;Parking spot&apos; , OrderItem__r.Product_Type_Name__c = &apos;Standard Products&apos;), 0,  OrderItem__r.Quantity )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>