force-app/main/default/objects/MonthlyPayment__c/fields/Parking_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Parking_Monthly_Income__c</fullName>
    <formula>IF(  OrderItem__r.Product_Sub_Type_Name__c = &apos;Parking spot&apos;,  FinalPrice__c  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parking Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>