force-app/main/default/objects/MonthlyPayment__c/fields/Parking_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Parking_Quantity__c</fullName>
    <formula>IF(  OrderItem__r.Product_Sub_Type_Name__c  = &apos;Parking spot&apos;,  OrderItem__r.Quantity  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parking Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>