force-app/main/default/objects/MonthlyPayment__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Monthly Payments</relationshipLabel>
    <relationshipName>Monthly_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>