force-app/main/default/objects/MonthlyPayment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
    OR(
        NOT(ISPICKVAL(OrderItem__r.Contract__r.Status, &quot;Activated&quot;)) &amp;&amp; 
        NOT(ISPICKVAL(OrderItem__r.Contract__r.Status, &quot;Pending&quot;)),
        
        AND(
            NOT(ISBLANK(OrderItem__r.Contract__r.Contract_Termination_Date__c)),
            OrderItem__r.Contract__r.Contract_Termination_Date__c &lt; TODAY()
        ),
        
        AND(
            NOT(ISBLANK(OrderItem__r.Contract__r.EndDate)),
            OrderItem__r.Contract__r.EndDate &lt; End_date__c
        ),
        
        AND(
            NOT(ISBLANK(OrderItem__r.Contract__r.StartDate)),
            OrderItem__r.Contract__r.StartDate &gt; Start_date__c
        ),
        
        NOT(ISPICKVAL(OrderItem__r.Approval_Status__c, &quot;Activated&quot;)),
        
        AND(
            OR(
                ISPICKVAL(OrderItem__r.Change_Action_Type__c, &quot;Removed&quot;),
                ISPICKVAL(OrderItem__r.Change_Action_Type__c, &quot;Changed&quot;)
            ),
            NOT(ISBLANK(OrderItem__r.Change_Action_Effective_End_Date__c)),
            OrderItem__r.Change_Action_Effective_End_Date__c &lt; End_date__c
        ),
        
        OR(
            Start_date__c &lt; DATEVALUE(OrderItem__r.Start_Date_Time__c),
            End_date__c &gt; DATEVALUE(OrderItem__r.End_Date_Time__c)
        )
    ),
    &quot;Deactivated&quot;,
    &quot;Active&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>